--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "start": "ts-node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc -p ."
   },
   "author": "akash madduru",
