--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "author": "akash madduru",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.9.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/jwt-simple": "^0.5.33",
     "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -29,13 +33,18 @@
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-azure": "^2.0.1",
     "nodemailer": "^6.7.5",
     "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
     "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.4",
+    "jest": "^28.1.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
